# Gradio

./: pyproject.toml
bmi/: app.py
bmi/flagged/: log.csv
